@@ -1,4 +1,5 @@
 5.0a4 -> 5.0b1:
+    - rpm.org: Don't do tilde expansion if HOME not set.
     - rpm.org: Add RPMCALLBACK_SCRIPT_ERROR callback type (not the best fix).
     - jbj: relax the current header sanity checks, permit 1Gb headers.
     - jbj: refactor some final \n out of msgs into rpmlog format instead.
